[gd_scene load_steps=16 format=2]

[ext_resource path="res://big_font_theme.tres" type="Theme" id=1]
[ext_resource path="res://images/character_bar.png" type="Texture" id=2]
[ext_resource path="res://images/a_button.png" type="Texture" id=3]
[ext_resource path="res://scripts/start_manager.gd" type="Script" id=4]
[ext_resource path="res://images/rat.png" type="Texture" id=5]
[ext_resource path="res://Small_Font.tres" type="DynamicFont" id=6]
[ext_resource path="res://images/Arrow.png" type="Texture" id=7]
[ext_resource path="res://scripts/move_anime.gd" type="Script" id=8]
[ext_resource path="res://images/top_start.png" type="Texture" id=9]
[ext_resource path="res://invert.tres" type="Material" id=10]
[ext_resource path="res://small_no_outline.tres" type="Theme" id=11]
[ext_resource path="res://images/human.png" type="Texture" id=12]
[ext_resource path="res://images/menu_bar.png" type="Texture" id=13]
[ext_resource path="res://small_outline.tres" type="Theme" id=14]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 200.0 ],
"_edit_vertical_guides_": [ 269.0 ]
}

[node name="Camera2D" type="Camera2D" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 56, 87 )
offset = Vector2( -0.348, 0 )
anchor_mode = 0
current = true
zoom = Vector2( 0.336, 0.31 )

[node name="Title" type="ViewportContainer" parent="Camera2D"]
material = ExtResource( 10 )
margin_left = -1.0
margin_top = -2.0
margin_right = 113.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera2D/Title"]
size = Vector2( 113, 72 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/Title/Viewport"]
margin_right = 113.0
margin_bottom = 72.0
custom_constants/separation = -2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Camera2D/Title/Viewport/VBoxContainer"]
margin_top = 5.0
margin_right = 113.0
margin_bottom = 27.0
theme = ExtResource( 1 )
meta_underlined = false
tab_size = 8
text = " Ambiguous"
fit_content_height = true
scroll_active = false
override_selected_font_color = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Camera2D/Title/Viewport/VBoxContainer"]
margin_top = 25.0
margin_right = 113.0
margin_bottom = 47.0
theme = ExtResource( 1 )
meta_underlined = false
tab_size = 8
text = " Dungeon"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RichTextLabel3" type="RichTextLabel" parent="Camera2D/Title/Viewport/VBoxContainer"]
margin_top = 45.0
margin_right = 113.0
margin_bottom = 67.0
theme = ExtResource( 1 )
meta_underlined = false
tab_size = 8
text = " Crawler"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Bars" type="ViewportContainer" parent="Camera2D"]
visible = false
margin_left = 4.0
margin_top = 65.0
margin_right = 337.0
margin_bottom = 193.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera2D/Bars"]
size = Vector2( 156, 128 )
handle_input_locally = false
hdr = false
debug_draw = 1
render_target_update_mode = 0

[node name="player_controls" type="HBoxContainer" parent="Camera2D/Bars/Viewport"]
margin_right = 156.0
margin_bottom = 128.0
custom_constants/separation = 4
alignment = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Camera2D/Bars/Viewport/player_controls"]
margin_left = 8.0
margin_right = 40.0
margin_bottom = 128.0
rect_min_size = Vector2( 32, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterBar" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control"]
position = Vector2( 16, 64 )
z_index = -1
texture = ExtResource( 2 )

[node name="Name" type="ViewportContainer" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar"]
material = ExtResource( 10 )
margin_left = -10.0
margin_top = -58.0
margin_right = 12.0
margin_bottom = -48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar/Name"]
size = Vector2( 22, 10 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar/Name"]
margin_top = 1.0
margin_right = 40.0
margin_bottom = 23.0
theme = SubResource( 2 )
meta_underlined = false
tab_size = 8
text = "Rat"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Arrow" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar"]
position = Vector2( 6, -42 )
texture = ExtResource( 7 )

[node name="Arrow2" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar"]
position = Vector2( -6, -42 )
texture = ExtResource( 7 )
flip_h = true

[node name="start_mask" type="Control" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar"]
margin_left = -14.0
margin_top = 38.0
margin_right = 14.0
margin_bottom = 61.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar/start_mask"]

[node name="TopStart" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar/start_mask"]
position = Vector2( 14, 24 )
texture = ExtResource( 9 )
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar/start_mask/TopStart"]
margin_left = -13.0
margin_top = 4.0
margin_right = 13.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="ViewportContainer" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar/start_mask/TopStart"]
material = ExtResource( 10 )
margin_left = -15.0
margin_top = 3.0
margin_right = 20.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar/start_mask/TopStart/Text"]
size = Vector2( 35, 10 )
handle_input_locally = false
hdr = false
debug_draw = 1
render_target_update_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar/start_mask/TopStart/Text/Viewport"]
margin_right = 50.0
margin_bottom = 10.0
theme = ExtResource( 11 )
meta_underlined = false
text = " Start"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AButton" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar/start_mask/TopStart"]
position = Vector2( 0, 15 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Camera2D/Bars/Viewport/player_controls/Control/CharacterBar/start_mask/TopStart/AButton"]

[node name="AButton" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control"]
position = Vector2( 15.578, 97.5379 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Camera2D/Bars/Viewport/player_controls/Control"]
wait_time = 0.2
one_shot = true

[node name="Rat" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control"]
position = Vector2( 17, 31 )
z_index = 1
texture = ExtResource( 5 )

[node name="Human" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control"]
visible = false
position = Vector2( 16, 28 )
texture = ExtResource( 12 )

[node name="Control2" type="Control" parent="Camera2D/Bars/Viewport/player_controls"]
margin_left = 44.0
margin_right = 76.0
margin_bottom = 128.0
rect_min_size = Vector2( 32, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterBar" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control2"]
position = Vector2( 16, 64 )
texture = ExtResource( 2 )

[node name="AButton" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control2"]
visible = false
position = Vector2( 16.068, 97.672 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Camera2D/Bars/Viewport/player_controls/Control2"]
wait_time = 0.2
one_shot = true

[node name="Control3" type="Control" parent="Camera2D/Bars/Viewport/player_controls"]
margin_left = 80.0
margin_right = 112.0
margin_bottom = 128.0
rect_min_size = Vector2( 32, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterBar" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control3"]
position = Vector2( 16, 64 )
texture = ExtResource( 2 )

[node name="AButton" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control3"]
visible = false
position = Vector2( 16.068, 97.672 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Camera2D/Bars/Viewport/player_controls/Control3"]
wait_time = 0.2
one_shot = true

[node name="Control4" type="Control" parent="Camera2D/Bars/Viewport/player_controls"]
margin_left = 116.0
margin_right = 148.0
margin_bottom = 128.0
rect_min_size = Vector2( 32, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterBar" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control4"]
position = Vector2( 16, 64 )
texture = ExtResource( 2 )

[node name="AButton" type="Sprite" parent="Camera2D/Bars/Viewport/player_controls/Control4"]
visible = false
position = Vector2( 16.068, 97.672 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Camera2D/Bars/Viewport/player_controls/Control4"]
wait_time = 0.2
one_shot = true

[node name="ColorRect" type="ColorRect" parent="Camera2D/Bars/Viewport"]
margin_left = 49.0
margin_right = 201.0
margin_bottom = 15.0
rect_rotation = 44.3
color = Color( 0.839216, 0.827451, 0.619608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Camera2D/Bars/Viewport/ColorRect"]
margin_left = 6.0
margin_top = 2.0
margin_right = 213.0
margin_bottom = 26.0
rect_scale = Vector2( 0.677, 0.5 )
theme = ExtResource( 1 )
meta_underlined = false
tab_size = 8
text = " Under Construction"
fit_content_height = true
scroll_active = false
override_selected_font_color = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D"]
margin_left = 1.0
margin_top = 67.0
margin_right = 343.0
margin_bottom = 185.0
custom_constants/separation = 1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Camera2D/HBoxContainer"]
margin_left = 19.0
margin_right = 94.0
margin_bottom = 118.0
rect_min_size = Vector2( 75, 0 )
rect_pivot_offset = Vector2( 36, -5 )

[node name="MenuBar" type="Sprite" parent="Camera2D/HBoxContainer/Control"]
position = Vector2( 38, 59 )
texture = ExtResource( 13 )

[node name="Name" type="ViewportContainer" parent="Camera2D/HBoxContainer/Control"]
material = ExtResource( 10 )
margin_left = 8.0
margin_top = 3.0
margin_right = 1.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera2D/HBoxContainer/Control/Name"]
size = Vector2( 60, 23 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Label" type="Label" parent="Camera2D/HBoxContainer/Control/Name/Viewport"]
anchor_right = 1.0
margin_bottom = 23.0
rect_scale = Vector2( 1, 0.75 )
theme = ExtResource( 14 )
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Camera2D/HBoxContainer/Control"]
position = Vector2( -19, 0 )

[node name="Control2" type="Control" parent="Camera2D/HBoxContainer"]
margin_left = 95.0
margin_right = 170.0
margin_bottom = 118.0
rect_min_size = Vector2( 75, 0 )

[node name="MenuBar" type="Sprite" parent="Camera2D/HBoxContainer/Control2"]
position = Vector2( 38, 59 )
texture = ExtResource( 13 )

[node name="Name" type="ViewportContainer" parent="Camera2D/HBoxContainer/Control2"]
material = ExtResource( 10 )
margin_left = 8.0
margin_top = 3.0
margin_right = 1.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera2D/HBoxContainer/Control2/Name"]
size = Vector2( 60, 23 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Label" type="Label" parent="Camera2D/HBoxContainer/Control2/Name/Viewport"]
anchor_right = 1.0
margin_bottom = 23.0
rect_scale = Vector2( 1, 0.75 )
theme = ExtResource( 14 )
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Camera2D/HBoxContainer/Control2"]
position = Vector2( -19, 0 )

[node name="Control3" type="Control" parent="Camera2D/HBoxContainer"]
margin_left = 171.0
margin_right = 246.0
margin_bottom = 118.0
rect_min_size = Vector2( 75, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBar" type="Sprite" parent="Camera2D/HBoxContainer/Control3"]
position = Vector2( 38, 59 )
texture = ExtResource( 13 )

[node name="Name" type="ViewportContainer" parent="Camera2D/HBoxContainer/Control3"]
material = ExtResource( 10 )
margin_left = 8.0
margin_top = 3.0
margin_right = 1.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera2D/HBoxContainer/Control3/Name"]
size = Vector2( 60, 23 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Label" type="Label" parent="Camera2D/HBoxContainer/Control3/Name/Viewport"]
anchor_right = 1.0
margin_bottom = 23.0
rect_scale = Vector2( 1, 0.75 )
theme = ExtResource( 14 )
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Camera2D/HBoxContainer/Control3"]
position = Vector2( -19, 0 )

[node name="Control4" type="Control" parent="Camera2D/HBoxContainer"]
margin_left = 247.0
margin_right = 322.0
margin_bottom = 118.0
rect_min_size = Vector2( 75, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBar" type="Sprite" parent="Camera2D/HBoxContainer/Control4"]
position = Vector2( 38, 59 )
texture = ExtResource( 13 )

[node name="Name" type="ViewportContainer" parent="Camera2D/HBoxContainer/Control4"]
material = ExtResource( 10 )
margin_left = 8.0
margin_top = 3.0
margin_right = 1.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera2D/HBoxContainer/Control4/Name"]
size = Vector2( 60, 23 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Label" type="Label" parent="Camera2D/HBoxContainer/Control4/Name/Viewport"]
anchor_right = 1.0
margin_bottom = 23.0
rect_scale = Vector2( 1, 0.75 )
theme = ExtResource( 14 )
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Camera2D/HBoxContainer/Control4"]
position = Vector2( -19, 0 )
